Updating biotrainer dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,15 @@ license = "MIT License"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.11"
 
 pandas = "^2.1.1"
 seaborn = "^0.13.0"
 taxoniq = "^0.6.0"
 more-itertools = "^10.2.0"
+
+# Git-Dependencies
+biotrainer = { git = "https://github.com/SebieF/biotrainer.git", branch = "main"}
 
 [build-system]
 requires = ["poetry-core"]
