--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,18 @@
 [tool.poetry]
 name = "hvi-toolkit"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["Sebastian Franz <sebastian.franz@tum.de>"]
 license = "MIT License"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.11"
+python = "3.11.9"
 
 pandas = "^2.1.1"
 seaborn = "^0.13.0"
-taxoniq = "^0.6.0"
+taxoniq = "^1.0.1"
 more-itertools = "^10.2.0"
-
-# Git-Dependencies
-biotrainer = { git = "https://github.com/SebieF/biotrainer.git", branch = "main"}
 
 [build-system]
 requires = ["poetry-core"]
